# trts

./: CMakeLists.txt  readme.md
include/common/: ability.h  ability_reader.h  attack_ability.h  be_owned_ability.h  command.h  distance.h  entity.h  formatted_reader.h  formatted_writer.h  game_state.h  id_types.h  move_ability.h  multisearchable.h  occupy_space_ability.h  player.h  searchable.h  take_damage_ability.h  terrain.h
include/game/: active_ability.h  attack_ability_g.h  event.h  full_game_state.h  move_ability_g.h  take_damage_ability_g.h
include/io/: message_reader.h  message_writer.h  utils.h
include/lobby/: game_lobby_window.h  game_loop.h  host_game_window.h  host_lobby_window.h  join_game_window.h  join_lobby_window.h  main_menu_window.h  network_check_button.h  network_label.h  observed_widget.h  observing_widget.h  player_slot.h  spawn_client.h  spawn_server.h  state_window.h
include/ui/: attack_ability_u.h  attack_task.h  event_processor.h  move_ability_u.h  move_task.h  renderer.h  target.h  targetable_ability.h  task.h  ui_game_state.h  ui_state.h
maps/: test.map
src/common/: ability.cpp  ability_reader.cpp  attack_ability.cpp  be_owned_ability.cpp  command.cpp  distance.cpp  entity.cpp  formatted_reader.cpp  formatted_writer.cpp  game_state.cpp  move_ability.cpp  occupy_space_ability.cpp  player.cpp  take_damage_ability.cpp  terrain.cpp
src/game/: ability_constructors.cpp  active_ability.cpp  attack_ability_g.cpp  event.cpp  full_game_state.cpp  main.cpp  move_ability_g.cpp  take_damage_ability_g.cpp
src/io/: message_reader.cpp  (+2 more)
(+28 files in other folders)
